elasticsearch/templates/es-data-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-data
  namespace: elastic-search
spec:
  serviceName: es-data-headless
  replicas: 2
  selector:
    matchLabels:
      app: es-data
  template:
    metadata:
      labels:
        app: es-data
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - es-data
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
        - name: tls
          mountPath: /usr/share/elasticsearch/config/certs
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: es-config
      - name: tls
        secret:
          secretName: es-tls-secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2"
      resources:
        requests:
          storage: 5Gi
