elasticsearch/templates/es-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-client
  namespace: elastic-search
spec:
  selector:
    app: es-data
  ports:
  - port: 9200
    name: http
