elasticsearch/templates/es-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es-exporter
  namespace: elastic-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es-exporter
  template:
    metadata:
      labels:
        app: es-exporter
    spec:
      containers:
      - name: es-exporter
        image: justwatch/elasticsearch_exporter:1.1.0
        args:
        - "--es.uri=https://es-client:9200"
        - "--es.ssl-verification=false"
        ports:
        - name: http
          containerPort: 9114
---
apiVersion: v1
kind: Service
metadata:
  name: es-exporter
  namespace: elastic-search
spec:
  selector:
    app: es-exporter
  ports:
  - name: http
    port: 9114
    targetPort: 9114
